<resources>
    <string name="app_name">KushIdeaApp</string>
    <string name="todo">TODO</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="just_a_few_details_to_get_you_started">Just a few details to get you started</string>
    <string name="get_started">Get Started</string>
    <string name="Name">name</string>
    <string name="name">Full Name</string>
    <string name="phone">Mobile Number</string>
    <string name="sign_up">Sign Up</string>

</resources>
